--- a/Spring-boot userapi/src/main/resources/application.properties
+++ b/Spring-boot userapi/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=ashu	
+spring.security.user.password=ashu
+spring.security.user.roles=ADMIN
