--- a/Spring-boot userapi/src/main/resources/application.properties
+++ b/Spring-boot userapi/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 logging.level.org.springframework.security=DEBUG
 
 
+management.endpoints.web.exposure.include=*
